# AgentDock

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml  tauri-smoke.yml
apps/desktop/: README.md  electron-builder.yml  eslint.config.mjs  index.html  package.json  tsconfig.app.json  tsconfig.electron.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  global.d.ts  index.css  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/ports/: database.rs  file_system.rs  mod.rs
apps/desktop/src/core/asset/: assetService.ts
apps/desktop/src/core/db/: database.ts
apps/desktop/src/core/ports/: pathPort.ts
apps/desktop/src/core/snapshot/: snapshotRepository.ts  snapshotService.ts
apps/desktop/src/core/storage/: paths.ts
apps/desktop/src/core/types/: asset.ts
apps/desktop/src/main/: ipc.ts  main.ts
apps/desktop/src/preload/: preload.ts
apps/desktop/src/shared/: agentdockApi.ts
docs/architecture/: package-boundary-and-migration-plan.md  tauri-migration.md
docs/mvp/: phase-1-development-plan.md
docs/release/: README.md
docs/ui/: AgentDock.html  agentdock-ui.html
memory/: scenario-target-convergence-plan-2026-06-05.md  session-handoff-2026-06-05.md  ui-replication-task-list.md
scripts/: make-icons.bat  make-icons.sh
(+28 files in other folders)
