[package]
name = "agentdock-desktop"
version = "0.1.0"
description = "Local-first agent asset registry for managing and syncing skills and AGENTS.md assets."
authors = ["AgentDock Contributors"]
edition = "2021"
rust-version = "1.77"

# Avoid two `[[bin]]` entries (one auto-detected from `src/main.rs` plus
# the `lib.rs` re-export below) by keeping this single-binary layout.
# Tauri 2.x reads `lib.rs` to expose `pub fn run()` consumed by `main.rs`.

[lib]
name = "agentdock_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
tokio = { version = "1", features = ["fs", "sync", "rt"] }

# Ports (Phase 2 will fill these with real impls; for now just the types
# and trait declarations so the rest of the project can compile).
[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]   # bundle SQLite — no system dep

[dependencies.r2d2]
version = "0.8"

[dependencies.r2d2_sqlite]
version = "0.25"

[dependencies.sha2]
version = "0.10"

[features]
# Used by `tauri dev` to enable debug-only plugins
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
